name:                lightarrow
version:             0.1.0.0
-- synopsis:
-- description:
homepage:
license:             BSD3
license-file:        LICENSE
author:              Alex Stuart
maintainer:          example@example.com
copyright:           2019 Alex Stuart
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     Lightarrow
                       Data.Lightarrow
                       Data.Lightarrow.Artifact
                       Data.Lightarrow.Audio
                       Data.Lightarrow.Bitmap
                       Data.Lightarrow.Color
                       Data.Lightarrow.IdentityList
                       Data.Lightarrow.Mesh
                       Data.Lightarrow.SceneGraph
                       Data.Lightarrow.SceneTransform
                       Data.Lightarrow.Shading
                       Data.Lightarrow.Vector
                       Graphics.Lightarrow
                       Graphics.Lightarrow.Blit
                       Graphics.Lightarrow.Rasterize
                       Graphics.Lightarrow.Rectangle
                       Simulation.Lightarrow
                       Simulation.Lightarrow.Collision
                       Simulation.Lightarrow.Cue
                       Simulation.Lightarrow.Event
                       Simulation.Lightarrow.Kinematics
                       Simulation.Lightarrow.Task
                       Simulation.Lightarrow.RigidMotion
                       Sound.Lightarrow
                       Sound.Lightarrow.Mixer
                       System.Lightarrow
                       System.Lightarrow.Actuation
                       System.Lightarrow.Joystick
                       System.Lightarrow.Keyboard
                       System.Lightarrow.Load
                       System.Lightarrow.Mouse
                       System.Lightarrow.Platform
                       System.Lightarrow.Random
                       System.Lightarrow.Sensation
                       System.Lightarrow.Timing
  default-extensions:  Arrows
                       BangPatterns
                       FlexibleContexts
                       FlexibleInstances
                       FunctionalDependencies
                       GADTs
                       MultiParamTypeClasses
                       OverloadedStrings
                       PartialTypeSignatures
                       PolyKinds
                       RankNTypes
                       ScopedTypeVariables
                       TypeFamilies
                       TypeFamilyDependencies
                       TupleSections
  build-depends:       array,
                       base >= 4.7 && < 5,
                       bearriver,
                       bytestring,
                       composition,
                       containers,
                       dunai,
                       linear,
                       mtl,
                       optics,
                       simple-affine-space,
                       text,
                       tf-random,
                       time,
                       transformers
